# financial-system

./: next.config.js  package-lock.json  package.json
src/: utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs  models.rs  schema.rs
src/app/: layout.tsx  page.tsx
src/components/: AddBudgetModal.tsx  AddExpenseModal.tsx  BudgetCard.tsx  TotalBudgetCard.tsx  UncategorizedBudgetCard.tsx  ViewExpensesModal.tsx
src/components/AddBudgetModal/: AddBudgetModal.css  AddBudgetModal.tsx
src/components/AddExpenseModal/: AddExpenseModal.css  AddExpenseModal.tsx
src/components/BudgetCard/: BudgetCard.css  BudgetCard.tsx
src/components/ViewExpensesModal/: ViewExpensesModal.css  ViewExpensesModal.tsx
src/contexts/: BudgetsContext.tsx
src/hooks/: useLocalStorage.ts
