[package]
name = "app"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
rustflags = ["-L", "/path/to/mysqlclient/libraries"]

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }
pkg-config = "0.3.19"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [] }
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
uuid = "0.8.2"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
